Validate Solramp popup on Home page

--- a/widget/example/index.html
+++ b/widget/example/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-<button onclick="openPopup()">Toggle</button>
-<script src="popup.js"></script>
-<script>
-	/** @type {Window.Popup} */
-    let instance;
-	(() => {
-		instance = window.popup.initialize({recipient: "0292399023"});
-    })()
+    <body>
+        <button onclick="openPopup()">Toggle</button>
+        <script src="popup.js"></script>
+        <script>
+            /** @type {Window.Popup} */
+            let instance;
+            (() => {
+                instance = window.popup.initialize({ business: "0292399023" });
+            })();
 
-    function openPopup() {
-		instance.open({amount: "20000", fiat: "AED", customer_email: "test@mailinator.com"})
-    }
-</script>
-</body>
+            function openPopup() {
+                instance.open({
+                    amount: "20000",
+                    fiat: "AED",
+                    crypto: "USDC",
+                    customer_email: "test@mailinator.com",
+                });
+            }
+        </script>
+    </body>
 </html>
